[gd_scene load_steps=9 format=2]

[ext_resource path="res://tilesets/Kiyu_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://scripts/characters/Steve.gd" type="Script" id=2]
[ext_resource path="res://ASSETS/sounds/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://ASSETS/sounds/kiyu_death.wav" type="AudioStream" id=4]
[ext_resource path="res://ASSETS/sounds/pipe.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.0
height = 14.0

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 100 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -5 ), Vector2( 100, -5 ) ]
}

[node name="Kiyu" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = ExtResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 1.0

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0

[node name="EnterPipeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 20.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/pipe_enter = SubResource( 2 )
anims/pipe_enter_right = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
